# mytextgame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MyTextGame.cpp  MyTextGame.h  README.md  mytextgame.cppcheck
assets/: menu.scene
assets/gfx/title/: neutral.dds
assets/scenes/: menu.scene
assets/scripts/menu/: mainmenu.script
assets/scripts/transition/: levelload.script
assets/text/: intro.txt  intro_ru.txt  menumain.txt
src/: Generic.h  MyTextGame.cpp  MyTextGame.h  Settings.h  Timer.h
src/assets/: AssetInterface.h  AssetInterfaceFactory.h  GfxAsset.cpp  GfxAsset.h  Loader.cpp  Loader.h  ModelAsset.cpp  ModelAsset.h  SceneAsset.cpp  SceneAsset.h  ScriptAsset.cpp  ScriptAsset.h  SoundAsset.cpp  SoundAsset.h  TextAsset.cpp  TextAsset.h
src/audio/: AudioWrapper.cpp  AudioWrapper.h
src/debug/: DebugUI.cpp  DebugUI.h  Logger.h
src/entities/: Graphic2D.cpp  Graphic2D.h  Node.cpp  Node.h  Scene.cpp  Scene.h
src/input/: CameraController.cpp  CameraController.h  GamepadInput.h  IInput.cpp  IInput.h  KeyboardInput.h
src/render/: Camera.h  Gfx.cpp  Gfx.h
src/scene/: SceneLoader.cpp  SceneLoader.h
src/scripting/: Runtime.cpp  Runtime.h  ScriptFunctions.cpp  ScriptFunctions.h
src/system/: Registry.h  Settings.h  Timer.h  Types.h
test/: MyTextGameTest.cc
